# Simple-UK-COVID-19-epidemic-model

./: README.md  main.py  pyproject.toml
sources/: data_2021-Jan-08.csv  data_2021-Jan-08.url  data_2021-Jan-16.csv  datadownload.url  datadownload.xlsx
